塑造英语体系

--- a/副词.md
+++ b/副词.md
@@ -36,3 +36,8 @@
    - 例如："Quickly, she finished the race."（迅速地，她完成了比赛。）
 
 副词在句子中具有重要作用，可以提供额外信息，使句子更加详细和准确。了解不同类型的副词及其用法可以帮助你更好地表达自己的意思，使语言更具表现力。
+
+## 副词与形容词
+
+- 副词 + 形容词
+- 副词 + 副词
